# catalystindex

./: .env.example  .gitignore  CODESCLOUD_TASKS.md  DELIVERY_CHECKLIST.md  DELIVERY_PLAN.md  Dockerfile  README.md  build_order_spec.md  generate_token.py  generation_spec.md  ingestion_pipeline_spec.md  logs_audits_metrics_spec.md  pyproject.toml  sdk_spec.md  search_spec.md  security_tenancy_spec.md  test_fullstack.sh  test_fullstack_multipart.sh  test_fullstack_upload.py  test_ingest.sh  test_pages_50-70.sh  test_qodex_full.py  test_qodex_full.sh  test_qodex_ingestion.py  test_qodex_integration.py  test_qodex_sparse.py  test_search_quality.py
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: config.yaml
configs/cache/: disabled.yaml  redis.yaml
configs/db/: postgres.yaml
configs/embeddings/: cohere.yaml  openai.yaml
configs/env/: dev.yaml  prod.yaml  staging.yaml
configs/reranker/: cohere.yaml  openai.yaml
configs/storage/: qdrant.yaml  s3.yaml
configs/workers/: default.yaml  disabled.yaml
docs/: bulk_ingestion_plan.md  feature_backlog.md  future_enhancements_plan.md  llm_classification_plan.md  observability.md  runtime_profiles.md  security_review.md  site_crawl_plan.md  spec_alignment_report.md  streaming_ingestion_plan.md  testing.md  vision_rerank_plan.md
fastapi/: __init__.py
infrastructure/: docker-compose.dev.yml
pydantic/: __init__.py
scripts/: catalystctl.py  catalystctl_hydra.py  ingest_and_search_demo.py  run_worker.py
sdk/python/catalyst_index_sdk/: __init__.py  client.py  models.py
src/catalystindex/: main.py
src/catalystindex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/catalystindex/acquisition/: __init__.py  firecrawl.py  service.py
src/catalystindex/api/: dependencies.py  routes.py
src/catalystindex/artifacts/: store.py
src/catalystindex/auth/: jwt.py
src/catalystindex/chunking/: engine.py
src/catalystindex/config/: hydra_adapter.py  schemas.py  settings.py
src/catalystindex/embeddings/: base.py  hash.py  openai.py
src/catalystindex/models/: common.py
src/catalystindex/parsers/: base.py  openparse_adapter.py  pdf_splitter.py  qodex_adapter.py  registry.py  unstructured_adapter.py  visual_linker.py
src/catalystindex/policies/: resolver.py
src/catalystindex/qodex_parse/: README.md  __init__.py  api.py  chunking.py  test_docling.py
src/catalystindex/services/: context_expander.py  feedback.py  generation.py  ingestion.py  ingestion_jobs.py  knowledge_base.py  policy_advisor.py  policy_synthesizer.py  search.py  semantic_cache.py  workload.py
src/catalystindex/sparse/: __init__.py  qodex_generator.py
src/catalystindex/storage/: term_index.py  vector_store.py  visual_store.py
src/catalystindex/telemetry/: logger.py
src/catalystindex/workers/: __init__.py  dispatcher.py  tasks.py
tests/: conftest.py  test_acquisition_service.py  test_api_routes.py  test_feedback_service.py  test_ingestion_service.py  test_policy_advisor.py  test_search_service.py  test_unstructured_parser.py
tests/integration/: test_qdrant_vector_store.py
tests/perf/: README.md  __init__.py  base.py  ingestion_load.py  search_load.py
tests/smoke/: test_ingest_search_flow.py
(+60 files in other folders)
