[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalystindex"
version = "0.1.0"
description = "Catalyst Index RAG platform core services"
readme = "README.md"
authors = [{name = "Catalyst Index"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
qdrant = [
    "qdrant-client>=1.7.0",
]
redis = [
    "redis>=5.0.0",
]
workers = [
    "rq>=1.15.1",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
