[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalystindex"
version = "0.1.0"
description = "Catalyst Index RAG platform core services"
readme = "README.md"
authors = [{name = "Catalyst Index"}]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
qdrant = [
    "qdrant-client>=1.7.0",
]
redis = [
    "redis>=5.0.0",
]
openai = [
    "openai>=1.13.3",
]
workers = [
    "rq>=1.15.1",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.12",
]
ingestion = [
    "pdfminer-six>=20221105",
    "pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-magic>=0.4.27",
    "unstructured>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services (Qdrant, etc.)",
]
